--- a/style.css
+++ b/style.css
@@ -93,9 +93,9 @@ body{
 }
 #sideNav{
     height: 100vh;
-    width: 300px;
+    width: 30%;
     background-color: aliceblue;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     display: flex;
@@ -109,7 +109,7 @@ body{
 }
 .logo2{
     height: 100px;
-    width: 100px;
+    width: 80%;
     background-image: url(assets/logo.png);
     background-size: contain;
     background-repeat: no-repeat;
